fix of IF if there is only one argument avoid NPE Ruby shell error output is supressed unused pom.jim is removed genpom Jamal version upped to 1.7.2 parameter parsing development started add opens to the modules from the parent to avoid many warnings