@@ -15,10 +15,6 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
             <plugin>
@@ -28,6 +24,17 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                --add-opens jamal.test/javax0.jamal.test.extra=ALL-UNNAMED
+                          --add-opens jamal.test/javax0.jamal.test.core=ALL-UNNAMED
+                          --add-opens jamal.test/javax0.jamal.test.examples=ALL-UNNAMED
+            </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
